исправлена документация, дописаны эндпоинты, добавлены вебсокеты
