# pkg/handlers/posts.go
@@ -6,22 +6,29 @@ import (
 )
 
 type Post struct {
-	ID        int    `json:"id"`
-	Thread_id int    `json:"thread_id"`
-	Content   string `json:"content"`
+	ID       int    `json:"id"`
+	ThreadID int    `json:"threadID"`
+	Content  string `json:"content"`
 }
 
 type CreatePostRequest struct {
-	Thread_id int    `json:"thread_id"`
-	Content   string `json:"content"`
+	ThreadID int    `json:"threadID" binding:"required"`
+	Content  string `json:"content" binding:"required"`
+}
+
+type SuccessGettingPostsResponse struct {
+	Status string `json:"status" example:"success"`
+	Posts  []Post `json:"posts"`
 }
 
 // @Summary      Добавить новый пост
-// @Description  Создает новый пост на доске и делает запись в БД
+// @Description  Создает новый пост, который принадлежит определенной доске и делает запись в БД. При создании нового поста отдает в вебсокет данные: "event": "post_created", "data": {"thread_id": post.ThreadID, "content": post.Content}
 // @Tags         posts
 // @Accept       json
 // @Produce      json
 // @Success      201
+// @Failure 	 400 {object} BadRequestResponse "Ошибка при получении данных"
+// @Failure 	 500 {object} InternalServerErrorResponse "Ошибка при вставке поста в БД"
 // @Router       /bonchdvach/api/posts [post]
 func CreatePost(c *gin.Context) {
 	var post CreatePostRequest
@@ -31,10 +38,18 @@ func CreatePost(c *gin.Context) {
 		return
 	}
 
-	query := "INSERT INTO posts VALUES (thread_id, content)"
-	if _, err := db.Exec(query, post.Thread_id, post.Content); err != nil {
+	query := "INSERT INTO posts (thread_id, content) VALUES ($1, $2)"
+	if _, err := db.Exec(query, post.ThreadID, post.Content); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при вставке поста в БД", "details": err.Error()})
 		return
+	}
+
+	wsHub.Broadcast <- gin.H{
+		"event": "post_created",
+		"data": gin.H{
+			"thread_id": post.ThreadID,
+			"content":   post.Content,
+		},
 	}
 
 	c.JSON(http.StatusOK, gin.H{"status": "success"})
@@ -42,10 +57,12 @@ func CreatePost(c *gin.Context) {
 
 // @Summary      Получить все посты треда
 // @Description  Получает все посты определенного треда
-// @Tags         users
+// @Tags         posts
 // @Accept       json
 // @Produce      json
-// @Success      201
+// @Param        threadID path int true "Thread ID"
+// @Success      200 {object} SuccessGettingPostsResponse "Успешное получение постов треда"
+// @Failure 	 500 {object} InternalServerErrorResponse "Внутренняя ошибка"
 // @Router       /bonchdvach/api/posts/{threadID} [get]
 func GetAllPosts(c *gin.Context) {
 	threadID := c.Param("threadID")
@@ -62,7 +79,7 @@ func GetAllPosts(c *gin.Context) {
 	var posts []Post
 	for rows.Next() {
 		var p Post
-		if err := rows.Scan(&p.ID, &p.Thread_id, &p.Content); err != nil {
+		if err := rows.Scan(&p.ID, &p.ThreadID, &p.Content); err != nil {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при получении записи о посте", "details": err.Error()})
 			return
 		}
