# pkg/handlers/threads.go
@@ -6,22 +6,33 @@ import (
 )
 
 type Thread struct {
-	ID       int    `json:"id"`
-	Board_id int    `json:"board_id"`
-	Title    string `json:"title"`
+	ID      int    `json:"id"`
+	BoardID int    `json:"boardID"`
+	Title   string `json:"title"`
 }
 
 type CreateThreadRequest struct {
-	Board_id int    `json:"board_id"`
-	Title    string `json:"title"`
+	BoardID int    `json:"boardID" binding:"required"`
+	Title   string `json:"title" binding:"required"`
+}
+
+type SuccessCreateThreadResponse struct {
+	Success string `json:"success" example:"success"`
+}
+
+type SuccessGetThreadsResponse struct {
+	Success string   `json:"success" example:"success"`
+	Threads []Thread `json:"threads"`
 }
 
 // @Summary      Добавить новый тред
-// @Description  Создает новый тред на доске и делает запись в БД
+// @Description  Создает новый тред, принадлежащий определенной доске и делает запись в БД. При создании нового треда отдает в вебсокет данные: "event": "thread_created", "data": {"title": thread.Title, "board_id": thread.BoardID}
 // @Tags         threads
 // @Accept       json
 // @Produce      json
-// @Success      201
+// @Success      201 	{object} SuccessCreateThreadResponse "Успешное создание треда"
+// @Failure      400    {object}  BadRequestResponse   "Ошибка при получении данных"
+// @Failure      500    {object}  InternalServerErrorResponse   "Ошибка при вставке треда в БД"
 // @Router       /bonchdvach/api/threads [post]
 func CreateThread(c *gin.Context) {
 	var thread CreateThreadRequest
@@ -31,21 +42,30 @@ func CreateThread(c *gin.Context) {
 		return
 	}
 
-	query := "INSERT INTO threads VALUES (title, board_id)"
-	if _, err := db.Exec(query, thread.Title, thread.Board_id); err != nil {
+	query := "INSERT INTO threads (title, board_id) VALUES ($1, $2)"
+	if _, err := db.Exec(query, thread.Title, thread.BoardID); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при вставке треда в БД", "details": err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"status": "success"})
+	wsHub.Broadcast <- gin.H{
+		"event": "thread_created",
+		"data": gin.H{
+			"title":    thread.Title,
+			"board_id": thread.BoardID,
+		},
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"status": "success"})
 }
 
 // @Summary      Получить все треды доски
 // @Description  add user to the database
-// @Tags         users
+// @Tags         threads
 // @Accept       json
 // @Produce      json
-// @Success      201
+// @Success      200 	{object} SuccessGetThreadsResponse "Успешное получение всех тредов"
+// @Failure      500    {object}  InternalServerErrorResponse   "Внутренняя ошибка"
 // @Router       /bonchdvach/api/threads [get]
 func GetAllThreads(c *gin.Context) {
 	query := "SELECT * FROM threads"
@@ -61,7 +81,7 @@ func GetAllThreads(c *gin.Context) {
 	var threads []Thread
 	for rows.Next() {
 		var t Thread
-		if err := rows.Scan(&t.ID, &t.Board_id, &t.Title); err != nil {
+		if err := rows.Scan(&t.ID, &t.BoardID, &t.Title); err != nil {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при получении записи о треде", "details": err.Error()})
 			return
 		}
